[package]
name = "tracing-gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
# clap = { version = "3.2.16", features = ["derive"] }
eframe = "0.18.0"
egui = "0.18.1"
egui_extras = "0.18.0"
rfd = "0.10.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = "1.20.1"
tracing = "0.1.36"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
